AUT-2722 Add client_type configuration to GovSSO
