# tara-admin-api-schema/src/main/resources/swagger.yaml
@@ -735,6 +735,8 @@ components:
             minLength: 5
             pattern: (^.*@.*\..*$)
             example: katkestused@test.ee
+        metadata:
+          $ref: '#/components/schemas/ClientMetaData'
         access_token_jwt_enabled:
           type: boolean
           default: false
@@ -906,5 +908,14 @@ components:
           type: array
           items:
             type: string
+    ClientMetaData:
+      type: object
+      properties:
+        client_type:
+          type: string
+          enum:
+            - DEFAULT
+            - SECURED_APP
+          default: DEFAULT
 security:
   - cookieAuth: [ ]
